# rendering-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Readme.md  newProject.sh  renderdoc-settings.cap
contrib/backward/: backward.cpp
include/Engine/assets/: gltfImporter.hpp  importer.hpp
include/Engine/core/: app.hpp  frameTimer.hpp
include/Engine/ecs/: componentArray.hpp  ecs.hpp  entity.hpp  types.hpp  world.hpp
include/Engine/events/: eventDispatcher.hpp  keyEvent.hpp  mouseEvent.hpp
include/Engine/gfx/: openGLContext.hpp  vertexArray.hpp
include/Engine/ioc/: singleton.hpp
include/Engine/log/: driver.hpp  entry.hpp  level.hpp  policy.hpp  textFormatter.hpp
include/Engine/renderer/: camera.hpp  cameraController.hpp  mesh.hpp  model.hpp  renderer.hpp
include/Engine/util/: assert.hpp  macros.hpp  stacktrace.hpp  types.hpp
projectTemplate/: CMakeLists.txt  Makefile
projectTemplate/src/: main.cpp
sandbox/: CMakeLists.txt  Makefile
sandbox/src/: main.cpp  sandboxApp.cpp
shaders/: frag_basic.glsl  frag_debug.glsl  vertex_basic.glsl
src/: app.cpp  app.hpp  boot.cpp  boot.hpp  engine.hpp  entryPoint.cpp  pch.hpp
src/assets/: fastGltf.cpp  gltfImporter.cpp  gltfImporter.hpp  importer.cpp  importer.hpp
src/core/: app.cpp  app.hpp  boot.cpp  boot.hpp  entryPoint.cpp  frameTimer.cpp  layer.hpp  layerStack.cpp  layerStack.hpp
src/ecs/: archetype.cpp  archetype.hpp  component.hpp  componentArray.hpp  ecs.cpp  ecs.hpp  entity.cpp  entity.hpp  types.hpp
src/events/: event.hpp  eventDispatcher.hpp  keyCodes.hpp  keyEvent.hpp  mouseEvent.hpp  viewportEvent.hpp  windowEvent.hpp
src/gfx/: bufferLayout.cpp  bufferLayout.hpp  commands.cpp  commands.hpp  context.hpp  framebuffer.cpp  framebuffer.hpp  indexBuffer.cpp  indexBuffer.hpp  openGLContext.cpp  openGLContext.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertexArray.cpp  vertexBuffer.cpp  vertexBuffer.hpp
src/gui/: imGuiManager.cpp  imGuiManager.hpp  imGuiViewport.cpp  imGuiViewport.hpp  imguiBuild.cpp  imguiLayer.cpp  imguiLayer.hpp  layerStack.cpp  layerStack.hpp
src/input/: input.cpp  input.hpp  keyCodes.hpp  sdlInput.cpp  sdlInput.hpp  sdlKeyCodes.cpp  sdlKeyCodes.hpp
src/ioc/: container.cpp  container.hpp  exception.hpp  singleton.cpp  singleton.hpp
src/log/: channel.cpp  channel.hpp  driver.hpp  entry.cpp  entry.hpp  entryBuilder.cpp  entryBuilder.hpp  fileDriver.cpp  fileDriver.hpp  level.cpp  level.hpp  linuxDebugDriver.cpp  linuxDebugDriver.hpp  log.cpp  log.hpp  severityLevelPolicy.cpp  severityLevelPolicy.hpp  textFormatter.cpp  textFormatter.hpp
src/renderer/: bufferLayout.cpp  camera.cpp  camera.hpp  cameraController.cpp  cameraController.hpp  commands.cpp  context.hpp  indexBuffer.cpp  indexBuffer.hpp  mesh.cpp  mesh.hpp  model.cpp  openGLContext.cpp  openGLContext.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  vertexArray.cpp  vertexArray.hpp  vertexBuffer.cpp  vertexBuffer.hpp
src/util/: assert.cpp  assert.hpp  debug.cpp  debug.hpp  exception.cpp  exception.hpp  macros.hpp  observer.cpp  observer.hpp  stacktrace.cpp  stacktrace.hpp
src/window/: input.hpp  sdlInput.cpp  sdlInput.hpp  sdlKeyCodes.cpp  sdlKeyCodes.hpp  sdlWindow.cpp  sdlWindow.hpp  window.cpp  window.hpp
test/: CMakeLists.txt  Makefile
test/src/: main.cpp  test.hpp  testApp.cpp  testIOC.hpp  testIoC.cpp  testLog.cpp  testSingleton.cpp  testSingleton.hpp  toto.cpp
test/src/ecs/: archetypeManager.cpp  componentArray.cpp  entity.cpp
test/src/ioc/: container.cpp  singleton.cpp
test/src/log/: channel.cpp  entry.cpp  formatter.cpp
test/src/testCore/: asserts.hpp  main.cpp
